--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
               <option value="all">كل حاجه</option>
               <option value="pc">قطع البي سي</option>
               <option value="complete">بي سي متجمع</option>
+              <option value="screen">شاشات</option>
               <option value="hdd">HDD</option>
               <option value="ssd">SSD</option>
+              <option value="key">Accessories</option>
               <option value="games">Games</option>
             </select>
           </div>
@@ -63,7 +65,7 @@
     <!-- بانر أو مقدمة -->
     <section class="hero">
       <h1>اهلا بيك في مكانك</h1>
-      <p>هتلاقي اي قطعه او تجميعه اتكلمت عليها هنا / يرجي العلم بان هذا الموقع تحت رعاية Egycomputers /دوس علي عرض عشان تدخل علي صفحة المنتج</p>
+      <p>دوس علي عرض ثم شراء من المصدر عشان تشتري اي حاجه انت عايزها / العربه لسه مشتغلتش / يرجي العلم بان هذا الموقع تحت رعاية Egycomputers,Angry Store, وهيكون اخري بيكم عشان نزود ونكبر التعاقدات</p>
     </section>
 
     <!-- قائمة المنتجات (سيتم توليد البطاقات عبر JS) -->
